--- a/client/templates/site_view/site_view.html
+++ b/client/templates/site_view/site_view.html
@@ -1,37 +1,22 @@
 <template name="site_view">
 
+<div class="container-fluid">
 
-<div class="row">
   <div class="col-md-8 col-xs-12">
-    
-
     <div class="SiteViewMapContainer">
-
-
       {{> googleMap name="site_view_map" options= site_view_map_options}}
-
     </div>
-    
-
   </div>
   
 
-  <div class="col-md-4 ">
-
+  <div class="col-md-4">
     <div class="SiteViewInfoContainer">
-  
-      <h1> {{siteID}} </h1> <h2>{{SiteName}}</h2>
-
-      <span class="ImageContainer">
-        
-
-      </span>
-
+      <h2> {{siteID}}:{{SiteName}}</h2>
       <p>{{{Desc}}}</p>
-
+      <span class="ImageContainer">
+        {{> slider}}
+      </span>
     </div>
-    
-
   </div>
   
 </div>
