--- a/client/templates/slider/slider.html
+++ b/client/templates/slider/slider.html
@@ -1,15 +1,7 @@
 
 <template name="slider">
-
-<div id="carousel" class="carousel slide container" style="width: 400px; margin: 0 auto">
-
-  <div class="carousel-inner">
+  <div class="carousel-holder">
+    {{create_delete}}
     {{image}}
   </div>
-
-  <a class="left carousel-control" href="#carousel" data-slide="prev">‹</a>
-  <a class="right carousel-control" href="#carousel" data-slide="next">›</a>
-
-</div>
-
 </template>
